main/grammar.txt
statements  : NEWLINE* statement (NEWLINE+ statement)* NEWLINE*

statement	: expr

expr        : KEYWORD:VAR IDENTIFIER EQ expr
            : comp-expr (comp-expr)*

comp-expr   : arith-expr (arith-expr)*

arith-expr  : term ((PLUS|MINUS) term)*

term        : factor ((MUL|DIV|MOD) factor)*

factor      : (PLUS|MINUS) factor
            : power

power       : call (POW factor)*

call        : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom        : INT|FLOAT|STRING|IDENTIFIER
            : LPAREN expr RPAREN
